[project]
name = "markup-front-matter-parser"
version = "0.6.0"
description = "OOP-y front matter parser for markup files"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name="Jamison Griffith", email="jamison.griffith@gmail.com" }
]
requires-python = ">= 3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
keywords = ["markup", "front matter", "parser", "markdown", "html", "development"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
# TODO
Homepage = "https://github.com/"
Documentation = "https://github.com/"
Source = "https://github.com/<user>/<repo>"

[project.optional-dependencies]
code_style = ["black"]
testing = ["pytest"]
typing = ["mypy"]

[tool.mypy]
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
strict = true
